infrastructure/k8s/client-depl.yaml
# === Deployment
apiVersion: apps/v1
kind: Deployment
metadata:
  name: client-depl
spec:
  replicas: 1
  selector: # list the pods this deployment should manage using the matchLabels
    matchLabels:
      app: client
  template: # list the configuration of the pods we want this deployment to create
    metadata:
      labels:
        app: client
    spec:
      containers:
        - name: client
          image: attacktitan/blogmicro-client
