infrastructure/k8s/comments-depl.yaml
# === Deployment
apiVersion: apps/v1
kind: Deployment
metadata:
  name: comments-depl
spec:
  replicas: 1
  selector: # list the pods this deployment should manage using the matchLabels
    matchLabels:
      app: comments
  template: # list the configuration of the pods we want this deployment to create
    metadata:
      labels:
        app: comments
    spec:
      containers:
        - name: comments
          image: attacktitan/blogmicro-comments
