infrastructure/k8s/event-bus-depl.yaml
# === Deployment
apiVersion: apps/v1
kind: Deployment
metadata:
  name: event-bus-depl
spec:
  replicas: 1
  selector: # list the pods this deployment should manage using the matchLabels
    matchLabels:
      app: event-bus
  template: # list the configuration of the pods we want this deployment to create
    metadata:
      labels:
        app: event-bus
    spec:
      containers:
        - name: event-bus
          image: attacktitan/blogmicro-event-bus
