infrastructure/k8s/moderation-depl.yaml
# === Deployment
apiVersion: apps/v1
kind: Deployment
metadata:
  name: moderation-depl
spec:
  replicas: 1
  selector: # list the pods this deployment should manage using the matchLabels
    matchLabels:
      app: moderation
  template: # list the configuration of the pods we want this deployment to create
    metadata:
      labels:
        app: moderation
    spec:
      containers:
        - name: moderation
          image: attacktitan/blogmicro-moderation
