infrastructure/k8s/query-depl.yaml
# === Deployment
apiVersion: apps/v1
kind: Deployment
metadata:
  name: query-depl
spec:
  replicas: 1
  selector: # list the pods this deployment should manage using the matchLabels
    matchLabels:
      app: query
  template: # list the configuration of the pods we want this deployment to create
    metadata:
      labels:
        app: query
    spec:
      containers:
        - name: query
          image: attacktitan/blogmicro-query
