infrastructure/k8s/ingress-srv.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-srv
spec:
  ingressClassName: nginx # this replaced the annotation: kubernetes.io/ingress.class: nginx
  rules:
    - host: posts.com # rule for posts service traffic
      http:
        paths:
          - path: /posts
            pathType: ImplementationSpecific
            backend:
              service:
                name: posts-clusterip-srv # to communicate to posts cluster service
                port:
                  number: 4000
